fix favicon relative path, change div id from info to content_container, fix proforlio gallery img not properly align error

--- a/assignment1/assets/css/style.css
+++ b/assignment1/assets/css/style.css
@@ -107,7 +107,7 @@ footer{
 /* index.html */
 
 
-#info > img{
+#content_container > img{
     margin: 15px;
     width:200px;
     height:200px;
@@ -117,26 +117,34 @@ footer{
 
 /* portfolio.html */
 .icon{
-    width:250px;
-    height:250px;
+    width:200px;
+    height:200px;
     position: relative;
-    display: inline;
-    margin: 10px;
+    left: auto;
+    display: inline-block;
+    margin: 15px;
     box-sizing: border-box;
+    
+}
+
+.icon:hover{
+    transform: scale(1.5);
+    z-index: 4;
 }
 
 .icon> img{
     width:inherit;
     height:inherit;
-    z-index: 1; 
+    z-index: 1; /* To make sure img is always under the text */
+    border-radius: 5px;
 }
 
 .icon > p{
     /* move the label */
-    z-index: 2;
+    z-index: 2; /* To make sure img is always under the text */
     position: absolute;
     left: -10px;
-    bottom: 8px;
+    bottom: 10px;
     /* style the text */
     color: #fff;
     text-align: center;
@@ -150,10 +158,6 @@ footer{
 }
 
 /* contact.html */
-#form_container{
-    width:100%;
-}
-
 form > *{
     font-family: inherit;
     font-size: 100%;
